wwr/styles/rafting.css
:root {
    --primary-picton-blue: #36A4D9;
    --secondary-delft-blue: #1E3257;
    --accent-white-smoke: #F5F3F5;
    --accent-hunyadi-yellow: #F6AE2D;
}

* {
    box-sizing: border-box;
}

header,
main,
footer {
    max-width: 800px;
}

header {
    display: grid;
    grid-template-columns: 5fr 7fr;
    background-color: var(--secondary-delft-blue);
    padding-top: 15px;
    padding-bottom: 15px;
    border: 1px var(--primary-picton-blue) solid;
}

.logo {
    width: 120px;
    margin: auto;
}

.menu {
    display: flex;
    align-items: center;
    justify-content: center;
}

.menu-button {
    text-decoration: none;
    color: var(--secondary-delft-blue);
    background-color: var(--accent-white-smoke);
    border: 1px var(--primary-picton-blue) solid;
    padding-left: 16px;
    padding-right: 16px;
    line-height: 30px;
}

.hero {
    display: block;
    position: relative;
    margin-bottom: 10px;
}

.heading1 {
    top: 5px;
    left: 100px;
    color: var(--accent-white-smoke);
    font-family: "Racing Sans One";
    font-size: 48px;
    position: absolute;
}

.article1 {
    top: 170px;
    left: 50px;
    color: var(--accent-white-smoke);
    font-family: "STIX Two Text";
    font-size: 20px;
    position: absolute;
    background-color: rgba(246, 174, 45, 0.85);
    padding-top: 15px;
    padding-bottom: 15px;
    padding-left: 10px;
    padding-right: 10px;
    max-width: 600px;
}

.image1 {
    float: right;
}

.blank-section {
    clear: both;
    padding: 1px;
}

.history-section {
    border: 2px var(--secondary-delft-blue) solid;
    clear: both;
    padding-bottom: 10px;
}

.history-heading {
    text-align: center;
    line-height: 10px;
    margin-bottom: 12px;
}

.history-grid {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.history {
    padding-left: 15px;
    font-family: "STIX Two Text";
}

.adventure-section {
    margin-top: 16px;
    border: 2px var(--secondary-delft-blue) solid;
}

.adventure-heading {
    text-align: center;
}

.adventure-div {
    max-width: 800px;
    display: flex;
}

.adventure-figure {
    margin: 15px;
}

.adventure-figure img {
    width: 100%;
}

.caption {
    font-family: "STIX Two Text";
    text-align: center;
}

footer {
    text-align: center;
    display: grid;
    grid-template-columns: 5fr 1fr;
}

.sociallinks {
    display: flex;
    text-decoration: none;
    justify-content: center;
    align-items: center;
}

.logo2 {
    width: 28px;
    height: 28px;
    margin-left: 4px;
}

.logo2:first-of-type {
    width: 25px;
    height: 25px;
}

h2 {
    font-family: "Racing Sans One";
    color: var(--secondary-delft-blue);
}

